# socketCommunicator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: copilot-instructions.md  pull_request_template.md
src/NetIOMP/: cmpc_config.h  netmp.h  test_netiomp.cpp
src/NetIOMP/common/: net_io.h  utils.h
src/include/: Communicator.h
src/lib/: Communicator.cpp
tests/: CommunicatorTest.cpp  MPCPartiesTest.cpp  NetIOMPTest.cpp
tools/: LatencyBenchmark.cpp  analyze_performance.py  netiomp_vs_zmq_latency.py  plot_party_counts_sample.py
